--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-nng = "1.0.1"
+nng = { version = "1.0.1", features = ["build-nng"] }
+
+[profile.release]
+strip = true  # Automatically strip symbols from the binary.
+lto = true
+opt-level = "z"  # Optimize for size.
+codegen-units = 1
+panic = "abort"
