--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 nng = { version = "1.0.1", features = ["build-nng"] }
 
 [profile.release]
-strip = true  # Automatically strip symbols from the binary.
-lto = true
-opt-level = "z"  # Optimize for size.
-codegen-units = 1
-panic = "abort"
+# strip = true  # Automatically strip symbols from the binary.
+# lto = true
+# opt-level = "z"  # Optimize for size.
+# codegen-units = 1
+# panic = "abort"
